0.502 2023-11-23
  [New Features]
    * Add the _putenv_s method to the Sys::Env class.
    * Add the set_env method to the Sys class.
    
0.501 2023-11-23
  [Incompatible Changes]
     * The return type of the following methods in the Sys become void.
      chdir
      chmod
      mkdir
      rmdir
      opendir
      closedir
      close
      unlink
      rename
      bind
      listen
      connect
      shutdown
      socketpair
      setsockopt
      truncate
      flock
      print
      say
      printf
      seek
      utime
      chown
      open
      fdopen
      sysopen
      say
      kill
      pipe
       

0.500 2023-11-17
  [New Features and Incompatible Changes]
    * Rename the SIG_IO method in the Sys::Signal class is renamed to SIG_GO.
    * Change the signal_io method in the Sys::Signal class is renamed to signal_go.
      [Before]
      static method signal_io : Sys::Signal::Handler ($signum : int, $fd : int);
      [After]
      static method signal_go : Sys::Signal::Handler ($signum : int);
      
    * Add the SET_SIG_GO_WRITE_FD method to the Sys::Signal class.
  
  [New Features]
    * Add the O_BINARY method to the Sys::IO::Constant class.
    * Add the O_TEXT method to the Sys::IO::Constant class.
    * Add the _pipe method to the Sys::Process class.
    * The pipe method in the Sys class calls the _pipe method in the Sys::Process.
0.499 2023-11-17
  [New Features and Incompatible Changes]
    * Add the eq method to the Sys::Signal::Handler.
0.498 2023-11-16
  [New Features and Incompatible Changes]
    * Add the eq method to the Sys::Signal::Handler.
    * The signal method returns the old signal handler.
    * Remove the SIG_DFL and SIG_DFL class variables from the Sys::Signal class and add the SIG_DFL and SIG_DFL methods.
    * Remove the Sys::Signal::Handler::Ignore class.
    * Remove the Sys::Signal::Handler::Default class.
    * The signal method in the Sys class returns the old signal handler.