@@ -1,102 +1,0 @@
-# Copyright (c) 2023 Yuki Kimoto
-# MIT License
-
-class Sys::FileTest {
-  use Sys;
-
-  static method A : double ($file : string) {
-    return Sys->A($file);
-  }
-  
-  static method C : double ($file : string) {
-    return Sys->C($file);
-  }
-  
-  static method M : double ($file : string) {
-    return Sys->M($file);
-  }
-  
-  static method O : int ($file : string) {
-    return Sys->O($file);
-  }
-  
-  static method R : int ($file : string) {
-    return Sys->R($file);
-  }
-  
-  static method S : int ($file : string) {
-    return Sys->S($file);
-  }
-  
-  static method W : int ($file : string) {
-    return Sys->W($file);
-  }
-  
-  static method X : int ($file : string) {
-    return Sys->X($file);
-  }
-  
-  static method b : int ($file : string) {
-    return Sys->b($file);
-  }
-  
-  static method c : int ($file : string) {
-    return Sys->c($file);
-  }
-  
-  static method d : int ($file : string) {
-    return Sys->d($file);
-  }
-  
-  static method e : int ($file : string) {
-    return Sys->e($file);
-  }
-  
-  static method f : int ($file : string) {
-    return Sys->f($file);
-  }
-  
-  static method g : int ($file : string) {
-    return Sys->g($file);
-  }
-  
-  static method k : int ($file : string) {
-    return Sys->k($file);
-  }
-  
-  static method l : int ($file : string) {
-    return Sys->l($file);
-  }
-  
-  static method o : int ($file : string) {
-    return Sys->o($file);
-  }
-  
-  static method p : int ($file : string) {
-    return Sys->p($file);
-  }
-  
-  static method r : int ($file : string) {
-    return Sys->r($file);
-  }
-  
-  static method s : long ($file : string) {
-    return Sys->s($file);
-  }
-  
-  static method u : int ($file : string) {
-    return Sys->u($file);
-  }
-  
-  static method w : int ($file : string) {
-    return Sys->w($file);
-  }
-  
-  static method x : int ($file : string) {
-    return Sys->x($file);
-  }
-  
-  static method z : int ($file : string) {
-    return Sys->z($file);
-  }
-}
