@@ -2,6 +2,8 @@
   [New Features]
     * Add the _putenv_s method to the Sys::Env class.
     * Add the set_env method to the Sys class.
+  [Incompatible Changes]
+    * Remove the Sys::FileTest class.
     
 0.501 2023-11-23
   [Incompatible Changes]
